# ChatApp

./: .env  .gitignore  db.sqlite3  pyproject.toml
.github/workflows/: pipeline.yml
backend/: .env  007_socialaccount_sites.py  asgi.py  settings.py  urls.py
node/: tailwind.config.js
rt_chat/: apps.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
rt_chat/migrations/: 0001_initial.py  0002_chatgroup_users_online.py  0003_chatgroup_is_private_chatgroup_members_and_more.py  0004_alter_chatgroup_group_name_and_more.py  0005_chatgroup_admin_chatgroup_groupchat_name_and_more.py  0006_groupmessage_file_alter_chatgroup_group_name_and_more.py  0007_alter_chatgroup_group_name.py
rt_chat/templates/rt_chat/: chat.html  chat_message.html  chatroom_delete.html  chatroom_edit.html  create_groupchat.html
rt_chat/templates/rt_chat/partials/: chat_message_p.html  message_content.html  modal_chat_leave.html  online_count.html  online_status.html
static/css/: style.min.css  tailwind.css
staticfiles/css/: style.css
templates/: 404.html  base.html  home.html
templates/allauth/layouts/: base.html
templates/includes/: header.html
templates/layouts/: blankLayout.html
users/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: profile.html  profileEdit.html  profile_settings.html
